--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,17 @@ H1 {
   display: flex;
   justify-content: center;
   font-size: 50px;
-  -webkit-text-stroke: 1px rgb(255, 255, 255);
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
+  color: rgb(255, 255, 255)
 }
 
 body {
-  background: radial-gradient(circle, rgba(241,238,228,1) 0%, rgba(6,43,173,1) 99%);
+  background-image: url("/background.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: 'Roboto', sans-serif;
+  color: white;
 }
-
 .card {
   width: 300px;
   height: 400px;
@@ -59,21 +63,21 @@ body {
 
 h2,
 h3 {
-  color: black;
+  color: rgb(255, 251, 251);
   font-size: 50px;
   font-family: "Roboto", sans-serif;
   padding: 20px;
   margin: 50px 0px;
   margin-top: 10px;
-  -webkit-text-stroke: 1px rgb(255, 255, 255);
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
 
 p {
   font-size: 30px;
   font-family: "Roboto", sans-serif;
   margin: 200px 0px;
-  color: black;
-  -webkit-text-stroke: 1px rgb(255, 255, 255);
+  color: rgb(255, 251, 251);
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
 
 ul {
@@ -91,7 +95,7 @@ a {
   font-family: "Roboto", sans-serif;
   text-decoration: none;
   color: black;
-  -webkit-text-stroke: 1px rgb(255, 255, 255);
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
 
 img {
