--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ H1 {
 }
 
 body {
-  background-image: url("/background.jpeg");
+  background-image: url("background.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   font-family: 'Roboto', sans-serif;
