--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ p {
   font-family: "Roboto", sans-serif;
   margin: 200px 0px;
   color: rgb(255, 251, 251);
-  -webkit-text-stroke: 1px rgb(0, 0, 0);
+  -webkit-text-stroke: 0.5px rgb(255, 255, 255);
 }
 
 ul {
@@ -94,8 +94,7 @@ a {
   font-size: 40px;
   font-family: "Roboto", sans-serif;
   text-decoration: none;
-  color: black;
-  -webkit-text-stroke: 1px rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 img {
@@ -115,9 +114,9 @@ img {
 }
 
 a:hover {
-  color: rgba(233, 14, 6, 0.87);
+  color: rgba(13, 162, 231, 0.87);
   border: 2px solid rgb(255, 255, 255);
-  -webkit-text-stroke: 1px rgb(252, 8, 8);
+  -webkit-text-stroke: 1px rgb(19, 114, 223);
   padding: 10px;
 }
 
